--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-pandas
-scikit-learn
-matplotlib
-seaborn
-jupyter
+jupyter==1.1.1
+matplotlib==3.10.3
+numpy==2.2.5
+pandas==2.2.3
+scikit-learn==1.6.1
+seaborn==0.13.2
