--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ numpy==2.2.5
 pandas==2.2.3
 scikit-learn==1.6.1
 seaborn==0.13.2
+openpyxl==3.1.5
+openai==1.78.0
+xgboost>=1.5.0
+transformers
+torch
+torchvision
+transformers
